; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_lua.c_script_get_mouse_pos.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_lua.c_script_get_mouse_pos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @script_get_mouse_pos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @script_get_mouse_pos(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.MPContext*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call %struct.MPContext* @get_mpctx(i32* %6)
  store %struct.MPContext* %7, %struct.MPContext** %3, align 8
  %8 = load %struct.MPContext*, %struct.MPContext** %3, align 8
  %9 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @mp_input_get_mouse_pos(i32 %10, i32* %4, i32* %5)
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @lua_pushnumber(i32* %12, i32 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @lua_pushnumber(i32* %15, i32 %16)
  ret i32 2
}

declare dso_local %struct.MPContext* @get_mpctx(i32*) #1

declare dso_local i32 @mp_input_get_mouse_pos(i32, i32*, i32*) #1

declare dso_local i32 @lua_pushnumber(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
